--- a/infra/k8s/posts-depl.yaml
+++ b/infra/k8s/posts-depl.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: posts-depl
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: posts
@@ -14,4 +14,4 @@ spec:
     spec:
       containers:
         - name: posts
-          image: karthickthankyou/posts:0.0.1
+          image: karthickthankyou/posts
