--- a/infra/k8s/event-bus-depl.yaml
+++ b/infra/k8s/event-bus-depl.yaml
@@ -1,30 +1,30 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: posts-depl
+  name: event-bus-depl
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: posts
+      app: event-bus
   template:
     metadata:
       labels:
-        app: posts
+        app: event-bus
     spec:
       containers:
-        - name: posts
-          image: karthickthankyou/posts
+        - name: event-bus
+          image: karthickthankyou/event-bus
 ---
 apiVersion: v1
 kind: Service
 metadata: 
-  name: posts-clusterip-srv
+  name: event-bus-srv
 spec:
   selector:
-    app: posts-clusterip
+    app: event-bus
   ports:
-    - name: posts-clusterip
+    - name: event-bus
       protocol: TCP
-      port: 4000
-      targetPort: 4000
+      port: 4005
+      targetPort: 4005
